Fix: resolve auth-service schema validation error by adding V9 migration for confirmation_key